feat: Auth based on roles are now implemented