@@ -50,8 +50,8 @@ public enum Role{
 
         var authorities = getPermissions()
                 .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.name()))
-                .toList();
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());;
 
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
 
